Fix z-index

--- a/crop-rotation-ui.css
+++ b/crop-rotation-ui.css
@@ -37,7 +37,8 @@
   position: absolute;
   top: 0; 
   left: 0;
-  z-index: -1;
+  z-index: 0;
+  pointer-events: none;
 }
 
 .crop-rotation #crop .parameter {
@@ -55,7 +56,7 @@
   width: 80px;
   height: 90px;
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   border: 0px solid;
   border-radius: 5px;
   font-size: 80%;
@@ -159,7 +160,7 @@
 .crop-rotation .well-item {
   float: left;
   cursor: move;
-  z-index: 100;
+  z-index: 3;
   width: 60px;
   height: 60px;
   margin-left: 5px;
